force-app/main/default/objects/Opportunity/fields/Agency_Fees__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fees__c</fullName>
    <inlineHelpText>Agency Fees From Bulk Upload</inlineHelpText>
    <label>Agency Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>