force-app/main/default/objects/Opportunity/fields/Bank_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference__c</fullName>
    <inlineHelpText>Bank Reference from Bulk Upload</inlineHelpText>
    <label>Bank Reference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>