force-app/main/default/objects/Opportunity/fields/Basket__c.field-meta.xml
<CustomField>
    <fullName>Basket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basket</label>
    <referenceTo>Basket__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>