force-app/main/default/objects/Opportunity/fields/Basket_Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>Basket_Collection_Id__c</fullName>
    <label>Basket Collection Id</label>
    <length>45</length>
    <type>Text</type>
</CustomField>