force-app/main/default/objects/Opportunity/fields/Basket_Status__c.field-meta.xml
<CustomField>
    <fullName>Basket_Status__c</fullName>
    <defaultValue>Text(0)</defaultValue>
    <label>Basket Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>No Ticket</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Only Ticket</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>