force-app/main/default/objects/Opportunity/fields/Campaign_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Record_Type__c</fullName>
    <formula>Campaign.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Record Type</label>
    <type>Text</type>
</CustomField>