force-app/main/default/objects/Opportunity/fields/Card_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Card_Payment_Details__c</fullName>
    <formula>npe03__Recurring_Donation__r.Card_Payment_Detail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Payment Details</label>
    <type>Text</type>
</CustomField>