force-app/main/default/objects/Opportunity/fields/Casesafe_Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>Casesafe_Donation_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casesafe Donation ID</label>
    <type>Text</type>
</CustomField>