force-app/main/default/objects/Opportunity/fields/Check_for_regional_Code_Website_Code__c.field-meta.xml
<CustomField>
    <fullName>Check_for_regional_Code_Website_Code__c</fullName>
    <formula>TEXT(Regional_Office_Code__c) != Website_Code__c</formula>
    <label>Check for regional Code, Website Code</label>
    <type>Checkbox</type>
</CustomField>