force-app/main/default/objects/Opportunity/fields/Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Number__c</fullName>
    <formula>npsp__Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact: Mobile Number</label>
    <type>Text</type>
</CustomField>