force-app/main/default/objects/Opportunity/fields/Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type__c</fullName>
    <formula>npsp__Primary_Contact__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Type</label>
    <type>Text</type>
</CustomField>