force-app/main/default/objects/Opportunity/fields/Created_Date_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Close_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate) &gt;  (CloseDate + 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date &gt; Close Date</label>
    <type>Checkbox</type>
</CustomField>