force-app/main/default/objects/Opportunity/fields/Current_Year_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Year Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>