force-app/main/default/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department</description>
    <formula>IF((ISBLANK(npe03__Recurring_Donation__c)),TEXT( Campaign.Department__c),TEXT(npe03__Recurring_Donation__r.Opportunity__r.Campaign.Department__c))</formula>
    <inlineHelpText>Department</inlineHelpText>
    <label>Department</label>
    <type>Text</type>
</CustomField>