force-app/main/default/objects/Opportunity/fields/Do_Not_Post__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Post__c</fullName>
    <formula>npsp__Primary_Contact__r.Do_Not_Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Post</label>
    <type>Checkbox</type>
</CustomField>