force-app/main/default/objects/Opportunity/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Donation</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>SourceDonations</relationshipName>
    <type>Lookup</type>
</CustomField>