force-app/main/default/objects/Opportunity/fields/Donation_Amount_Excluding_SR__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount_Excluding_SR__c</fullName>
    <inlineHelpText>Excluding Special Request</inlineHelpText>
    <label>Donation Amount Excluding SR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>