force-app/main/default/objects/Opportunity/fields/Donation_Amount_Olive_Trees__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount_Olive_Trees__c</fullName>
    <description>Used by conga for Olive tree certificates</description>
    <label>Donation Amount (Olive Trees)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>