force-app/main/default/objects/Opportunity/fields/Donation_created_time__c.field-meta.xml
<CustomField>
    <fullName>Donation_created_time__c</fullName>
    <formula>MID (TEXT ( CreatedDate + IF (DATEVALUE(CreatedDate) &gt;= DATE(YEAR(DATEVALUE(CreatedDate)), 3, 28) &amp;&amp; DATEVALUE(CreatedDate) &lt; DATE(YEAR(DATEVALUE(CreatedDate)), 10, 31), (1/24), 0) ), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation created time</label>
    <type>Text</type>
</CustomField>