force-app/main/default/objects/Opportunity/fields/Donation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Donation_Frequency__c</fullName>
    <formula>Text(Payment_Schedule__r.Frequency__c)</formula>
    <label>Donation Frequency</label>
    <type>Text</type>
</CustomField>