force-app/main/default/objects/Opportunity/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <description>Donation Type</description>
    <label>Donation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Donation_Type</valueSetName>
    </valueSet>
</CustomField>