force-app/main/default/objects/Opportunity/fields/DonationCode__c.field-meta.xml
<CustomField>
    <fullName>DonationCode__c</fullName>
    <formula>Text(Payment_Schedule__r.Code__c)</formula>
    <label>Donation Code</label>
    <type>Text</type>
</CustomField>