force-app/main/default/objects/Opportunity/fields/Donor_ID_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID_Item_Code__c</fullName>
    <description>Field used to match for bulk upload</description>
    <label>Donor ID Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>