force-app/main/default/objects/Opportunity/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>IF(ISNULL(npsp__Primary_Contact__c), Account.Name,   npsp__Primary_Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>