force-app/main/default/objects/Opportunity/fields/Duplicate_Key_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Key_Agencies__c</fullName>
    <label>Duplicate Key (Agencies)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>