force-app/main/default/objects/Opportunity/fields/Duplicate_Key_Bank__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Key_Bank__c</fullName>
    <label>Duplicate Key (Bank)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>