force-app/main/default/objects/Opportunity/fields/Duplicate_Key_Bank_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Key_Bank_Organizations__c</fullName>
    <description>field used  to prevent duplicate oganizations</description>
    <label>Duplicate Key (Bank Organizations)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>