force-app/main/default/objects/Opportunity/fields/EMIAmount__c.field-meta.xml
<CustomField>
    <fullName>EMIAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EMI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>