force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>CASE(Donation_Frequency__c, &apos;Daily&apos;, Effective_Date__c+Number_of_Installments__c-1,&apos;Yearly&apos;,DATE(YEAR(Effective_Date__c)+Number_of_Installments__c,MONTH(Effective_Date__c),DAY(Effective_Date__c)),ADDMONTHS(Effective_Date__c,Number_of_Installments__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>