force-app/main/default/objects/Opportunity/fields/Estimate_Gift_Aid_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Gift_Aid_Value__c</fullName>
    <formula>(Gift_Aid_Eligible_Value_Actuals__c * 0.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Gift Aid Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>