force-app/main/default/objects/Opportunity/fields/Finance_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>