force-app/main/default/objects/Opportunity/fields/Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser__c</fullName>
    <formula>Text(Campaign.Fundraiser__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraiser</label>
    <type>Text</type>
</CustomField>