force-app/main/default/objects/Opportunity/fields/Fundraising_Team__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Team__c</fullName>
    <formula>TEXT( Campaign.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraising Team</label>
    <type>Text</type>
</CustomField>