force-app/main/default/objects/Opportunity/fields/Gift_Aid_Claim_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Claim_Value__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Gift Aid Claim Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>