force-app/main/default/objects/Opportunity/fields/Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Aid Declaration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.npsp__Primary_Contact__c</field>
            <operation>equals</operation>
            <valueField>Gift_Aid_Declaration__c.Donor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Gift_Aid_Declaration__c.Gift_Aid_Status__c</field>
            <operation>notEqual</operation>
            <value>Unspecified</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Gift_Aid_Declaration__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>giftAidDeclaration</relationshipName>
    <type>Lookup</type>
</CustomField>