force-app/main/default/objects/Opportunity/fields/Gift_Aid_Declaration_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <formula>ISPICKVAL(Gift_Aid_Declaration__r.Gift_Aid_Status__c, &apos;Yes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gift Aid Donor Preference</inlineHelpText>
    <label>Gift Aid Declaration Status</label>
    <type>Checkbox</type>
</CustomField>