force-app/main/default/objects/Opportunity/fields/Gift_Aid_Difference__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Difference__c</fullName>
    <formula>AND(Gift_Aid_Eligible_Value_Actuals__c&gt;0.00,Amount!=Gift_Aid_Eligible_Value_Actuals__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Aid Difference</label>
    <type>Checkbox</type>
</CustomField>