force-app/main/default/objects/Opportunity/fields/Gift_Aid_Eligible_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Eligible_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Gift Aid Status for this donation</description>
    <inlineHelpText>Gift Aid Status (Donation)</inlineHelpText>
    <label>Gift Aid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>