force-app/main/default/objects/Opportunity/fields/Gift_Aid_Eligible_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Eligible_Value__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Gift Aid Approximate Value Captured from Line Items Preference</inlineHelpText>
    <label>Gift Aid Approx value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>