force-app/main/default/objects/Opportunity/fields/Gift_Aid_Eligible_Value_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Eligible_Value_Actuals__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Difference between Gift Aid Eligible Actuals - Payment which is Precluded Gift Aid.
Calculated for Paid Donations Only</description>
    <formula>If(AND(IsWon,OR(Text(Gift_Aid_Eligible_Status__c)=&apos;Yes&apos;,Gift_Aid_Declaration_Status__c)),(Gift_Aid_Eligible_Value__c - Precluded_Gift_Aid_Value__c),0)</formula>
    <inlineHelpText>Gift Aid Eligible Actuals  -  Total Precluded Amount</inlineHelpText>
    <label>Gift Aid Eligible Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>