force-app/main/default/objects/Opportunity/fields/Gift_Aid_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Aid Submitted</label>
    <type>Checkbox</type>
</CustomField>