force-app/main/default/objects/Opportunity/fields/Gift_Aid_Submitted_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Submitted_Value__c</fullName>
    <description>Gift Aid Submitted Value</description>
    <label>Gift Aid Submitted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>