force-app/main/default/objects/Opportunity/fields/Gift_Aid_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Value__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>If the Donation is Submitted to HMRC portal, this Field will show the Submitted Gift Aid Value , else  Estimate Gift Aid Value</description>
    <formula>If(Gift_Aid_Submitted__c, Gift_Aid_Submitted_Value__c , Estimate_Gift_Aid_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimate Gift Aid Value or Submitted Gift Aid Value</inlineHelpText>
    <label>Gift Aid Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>