force-app/main/default/objects/Opportunity/fields/Gift_Refund_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Refund_Value__c</fullName>
    <formula>IF(Gift_Aid_Submitted__c  = true ,(Total_Refund__c - Precluded_Gift_Aid_Value__c) * 0.25,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Refund Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>