force-app/main/default/objects/Opportunity/fields/Has_Ticket_Items__c.field-meta.xml
<CustomField>
    <fullName>Has_Ticket_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Checked, this donations as Ticket Items</inlineHelpText>
    <label>Has Ticket Items</label>
    <type>Checkbox</type>
</CustomField>