force-app/main/default/objects/Opportunity/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <formula>IF(  ISBLANK(npe03__Recurring_Donation__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>