force-app/main/default/objects/Opportunity/fields/IsFirstGift__c.field-meta.xml
<CustomField>
    <fullName>IsFirstGift__c</fullName>
    <formula>CloseDate =  npsp__Primary_Contact__r.npo02__FirstCloseDate__c</formula>
    <label>IsFirstGift</label>
    <type>Checkbox</type>
</CustomField>