force-app/main/default/objects/Opportunity/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <description>Used by bulk upload</description>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>