force-app/main/default/objects/Opportunity/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>npsp__Primary_Contact__r.MailingStreet +&quot;, &quot;+ npsp__Primary_Contact__r.MailingCity + &quot;, &quot; +npsp__Primary_Contact__r.MailingPostalCode + &quot;, &quot; +npsp__Primary_Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>