force-app/main/default/objects/Opportunity/fields/Mailing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postcode__c</fullName>
    <formula>npsp__Primary_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Postcode</label>
    <type>Text</type>
</CustomField>