force-app/main/default/objects/Opportunity/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>Describes the medium a donation is delivered to organisation for processing.</description>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medium</valueSetName>
    </valueSet>
</CustomField>