force-app/main/default/objects/Opportunity/fields/Net_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Donation_Amount__c</fullName>
    <inlineHelpText>Net Donation Amount from Bulk Upload</inlineHelpText>
    <label>Net Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>