force-app/main/default/objects/Opportunity/fields/npsp__Acknowledgment_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Acknowledgment_Date__c</fullName>
    <description>The date that you acknowledged this Opportunity.</description>
    <inlineHelpText>Date of acknowledgment</inlineHelpText>
    <label>Acknowledgment Date</label>
    <type>Date</type>
</CustomField>