force-app/main/default/objects/Opportunity/fields/npsp__Acknowledgment_Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Acknowledgment_Status__c</fullName>
    <description>The acknowledgement status of this Opportunity.</description>
    <inlineHelpText>Status of Acknowledgment of this gift.</inlineHelpText>
    <label>Acknowledgment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Acknowledged</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
            </value>
            <value>
                <fullName>Email Acknowledgment Now</fullName>
            </value>
            <value>
                <fullName>Email Acknowledgment Not Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>